fixing the overflowing divs

--- a/app/assets/stylesheets/layouts/_show.scss
+++ b/app/assets/stylesheets/layouts/_show.scss
@@ -1,3 +1,28 @@
+.header-spaceship {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-align: center;
+  padding: 130px;
+  background-size: cover;
+  height: 45vh;
+  p {
+  font-size: 25px;
+  font-weight: lighter;
+  color: rgb(255, 255, 255);
+  opacity: 0.6;
+  margin-bottom: 30px;
+  }
+  h1 {
+  font-size: 50px;
+  font-weight: bold;
+  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  }
+}
+
+
+
 .middle-block {
   display: flex;
   align-items: center;
@@ -82,6 +107,7 @@
 }
 
 .rent-spaceship-scroll {
+  -webkit-box-shadow: 3px 3px 10px rgba(248, 247, 255, 0.3), -3px -3px 10px rgba(248, 247, 255, 0.3);
   box-shadow: 3px 3px 10px rgba(248, 247, 255, 0.3), -3px -3px 10px rgba(248, 247, 255, 0.3);
   border: 1px solid rgba(248, 247, 255, 0.5);
   border-radius: 5px;
@@ -114,11 +140,11 @@
   box-shadow: 3px 3px 10px rgba(248, 247, 255, 0.3), -3px -3px 10px rgba(248, 247, 255, 0.3);
   border: 1px solid rgba(248, 247, 255, 0.5);
   border-radius: 5px;
+  position: fixed;
   padding: 0px 20px;
-  top: 320px;
+  top: 425px;
   width: 35%;
   height: 420px;
-  position: fixed;
   background-color: none;
   h3 {
     color: ghostwhite;
